// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots With disabled prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      disabled={true}
      full={false}
      inverted={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "#DBDBE8",
            "borderColor": "#DBDBE8",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={true}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      disabled={true}
      full={false}
      inverted={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "#9898A6",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={true}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      disabled={true}
      full={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={true}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    full={true}
  >
    <View
      disabled={false}
      full={true}
      inverted={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "#F46152",
            "borderColor": "#F46152",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "100%",
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    full={true}
  >
    <View
      disabled={false}
      full={true}
      inverted={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "#F46152",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "100%",
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    full={true}
  >
    <View
      disabled={false}
      full={true}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "100%",
          },
        ]
      }
    >
      <Text
        disabled={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    inverted={true}
  >
    <View
      disabled={false}
      full={false}
      inverted={true}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={true}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    inverted={true}
  >
    <View
      disabled={false}
      full={false}
      inverted={true}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "#FFFFFF",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={true}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    inverted={true}
  >
    <View
      disabled={false}
      full={false}
      inverted={true}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    small={true}
  >
    <View
      disabled={false}
      full={false}
      inverted={false}
      pressed={false}
      small={true}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "#F46152",
            "borderColor": "#F46152",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    small={true}
  >
    <View
      disabled={false}
      full={false}
      inverted={false}
      pressed={false}
      small={true}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "#F46152",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    small={true}
  >
    <View
      disabled={false}
      full={false}
      pressed={false}
      small={true}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots Without props should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      disabled={false}
      full={false}
      inverted={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "#F46152",
            "borderColor": "#F46152",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots Without props should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      disabled={false}
      full={false}
      inverted={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "#F46152",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots Without props should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      disabled={false}
      full={false}
      pressed={false}
      small={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 48,
            "justifyContent": "center",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        disabled={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Gympass
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;
